force-app/main/default/objects/Class_Sub_Teach__c/Class_Sub_Teach__c.object-meta.xml
<CustomObject>
    <description>This object contains sections, teachers and subjects.</description>
    <label>Class Sub Teach</label>
    <nameField>
        <displayFormat>CTS-{0000}</displayFormat>
        <label>Class Sub Teach Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Sub Teach</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>