force-app/main/default/objects/Class_Sub_Teach__c/fields/section__c.field-meta.xml
<CustomField>
    <fullName>section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>section</label>
    <referenceTo>section__c</referenceTo>
    <relationshipLabel>Class Sub Teach</relationshipLabel>
    <relationshipName>Class_Sub_Teach</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>