force-app/main/default/objects/Class_Sub_Teach__c/fields/Subject_Course__c.field-meta.xml
<CustomField>
    <fullName>Subject_Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subject &amp; Course</label>
    <referenceTo>Subject_Course__c</referenceTo>
    <relationshipLabel>Class Sub Teach</relationshipLabel>
    <relationshipName>Class_Sub_Teach</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>