force-app/main/default/objects/Class_Sub_Teach__c/fields/Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teacher Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Sub Teach</relationshipLabel>
    <relationshipName>Class_Sub_Teach</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>